[ci skip] Update translations (Estonian)

--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -257,9 +257,43 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="color">Värv</string>
     <string name="zero_width_space">Ruumi raiskamata</string>
     <string name="basic_color_scheme">Põhilised värvid</string>
+    <string name="background_foreground_color_in_editor_works_dark_light">Muudab tekstiredaktori tausta ja esiplaani värvi. Kohandub rakenduse teemaga, nii et see on saadaval heledas ja tumedas teemas. Süntaksi esiletõstmise värvid jäävad samaks.</string>
+    <string name="preset">Eelseadistus</string>
+    <string name="foreground">Esiplaan</string>
     <string name="background">Taust</string>
+    <string name="set_foreground_or_background_color_hexcolor_also_possible">Kas määrata teksti esi- või taustavärv? Kuueteistkümnendvärvikoodi sisestamine on samuti võimalik.</string>
+    <string name="type">Tüüp</string>
+    <string name="folder">Kaust</string>
+    <string name="folder_is_created_without_extension">- Kaust luuakse ilma faililaiendita</string>
+    <string name="keep_existing_file">- Faile ja kaustu ei kirjutata üle</string>
+    <string name="multiple_windows">Mitu akent</string>
     <string name="font">Kirjatüüp</string>
+    <string name="open_new_documents_always_in_new_window">Ava dokumendid alati eraldi akendes. Lülitumiseks kasutage oma seadme klahvi „Viimased”.</string>
+    <string name="enter_or_select_format">Sisesta või vali vorming</string>
+    <string name="pick_date">Vali kuupäev</string>
+    <string name="pick_time">Mära kellaaeg</string>
+    <string name="get_format_instead_date_or_time">Hankige kuupäeva või kellaaja asemel vorming</string>
+    <string name="always_use_current_date_and_time">Kasuta alati praegust kuupäeva &amp; aega</string>
+    <string name="result">Tulemus</string>
+    <string name="just_time">Ainult aeg</string>
+    <string name="just_date">Ainult kuupäev</string>
+    <string name="last_used">Viimati kasutati</string>
+    <string name="my_note">minu_märge</string>
     <string name="close">Sulge</string>
+    <string name="cancel">Loobu</string>
+    <string name="app_start_tab">Millest alustab</string>
+    <string name="tab_to_select_at_start">Vaade milles rakendus alustab</string>
+    <string name="swipe_to_change_mode">Vaate muutmiseks tõmmake näpuga üle ekraani</string>
+    <string name="swipe_to_change_to_edit_or_view_mode">Muutmise- või vaatamise lülitumiseks pühkige (praeguse vaate vastandina)</string>
+    <string name="folder_first">Kaustad ees</string>
+    <string name="go_to">Mine</string>
+    <string name="appdata_public">AppData (avalik)</string>
+    <string name="appdata_private">AppData (isiklik)</string>
+    <string name="appdata_sdcard">AppData (SD kaardil)</string>
+    <string name="internal_storage">Sisemine salvestusruum</string>
+    <string name="open_the_document_from_main_view">Dokumendi saate avada altpoolt põhivaates, failibrauseris või käivitusprogrammis. Samuti on võimalik Markorisse jagatud teksti lisada.</string>
+    <string name="notebook_is_the_home_of_your_files">Märkmik/Notebook on kaust, mille Markor rakenduse käivitamisel failihaldurisse laadib. See on teie failide kodukaust.</string>
+    <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote on kiireim võimalus märkmete kirjutamiseks. See on Markdown-vormingus fail, mille vaikeasukoht &gt;Notebook/QuickNote.md&lt;, seadistustes saate kohandada failitee.</string>
     <string name="todo_is_the_easiest_way_">Halda oma ülesandeid TodDo abil. See on faili todo.txt vormingus vaikimisi asukohas &gt;Notebook/todo.txt&lt;, mille failiteed saad seadetes muuta.</string>
     <string name="navigationbar_color">Liikumisriba värv</string>
     <string name="black">Must</string>
@@ -312,12 +346,47 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="common_color_picker">Värvivalija</string>
     <string name="date_and_time">Kuupäev ja kellaaeg</string>
     <string name="jump_to_bottom">Hüppa lõppu</string>
+    <string name="quote">Tsiteering</string>
+    <string name="heading">Pealkiri</string>
+    <string name="heading_1">Pealkiri 1</string>
+    <string name="heading_2">Pealkiri 2</string>
+    <string name="heading_3">Pealkiri 3</string>
+    <string name="heading_4">Pealkiri 4</string>
+    <string name="heading_5">Pealkiri 5</string>
+    <string name="heading_6">Pealkiri 6</string>
     <string name="matches">Vastavused</string>
     <string name="search_replace_pattern_error_message">Viga otsi ja asenda mustris.</string>
     <string name="backup_settings">Varundamise seaded</string>
     <string name="restore_settings">Taasta seaded</string>
     <string name="failed_to_create_backup">Varunduse loomine ebaõnnestus</string>
     <string name="export_settings_to_json_file">Väljuta seaded json faili</string>
+    <string name="case_sensitive">Tõstutundlik</string>
+    <string name="stop_search_after_first_match">Lõpeta otsing pärast esimest leidu</string>
+    <string name="regex_can_not_be_compiled">Regex ei kõlba</string>
+    <string name="keep_both">Hoia mõlemad</string>
+    <string name="skip">Jäta vahele</string>
+    <string name="overwrite">Kirjuta üle</string>
+    <string name="keep_both_all">Hoia mõlemad (kõik)</string>
+    <string name="skip_all">Jäta vahele (kõik)</string>
+    <string name="overwrite_all">Kirjuta üle (kõik)</string>
+    <string name="copy_move_conflict_message">\'%s\' on juba asukohas %s olemas</string>
+    <string name="additional_contexts_and_projects">Täiendavad valdkonnad ja ettevõtmised</string>
+    <string name="enter_space_seperated_contexts_and_projects_these_will">Sisesta tühikuga eraldatud @valdkonnad ja +ettevõtmised. Need on alati nähtavad faili todo.txt sisestusdialoogides.</string>
+    <string name="infinite">Piiramata</string>
+    <string name="browse_by_project">Sirvi ettevõtmise kaupa</string>
+    <string name="browse_by_context">Sirvi valdkonna kaupa</string>
+    <string name="insert_project">Sisesta ettevõtmised</string>
+    <string name="insert_context">Sisesta valdkonnad</string>
+    <string name="browse_todo">Sirvi tegemisi</string>
+    <string name="browse_by_priority">Sirvi tähtsuse järgi</string>
+    <string name="browse_by_due_date">Sirvi tähtaja järgi</string>
+    <string name="due_overdue">Tähtaja ületanud</string>
+    <string name="due_today">Tähtaeg täna</string>
+    <string name="due_future">Tähtajani on veel aega</string>
+    <string name="completed">Lõpetatud</string>
+    <string name="advanced_filtering">Täpsem eraldamine</string>
+    <string name="match_any">Leia mistahes</string>
+    <string name="match_all">Leia kõik</string>
     <string name="attachment_folder_name">Manuste kausta nimi</string>
     <string name="attachment_folder_name_desc">Praeguse kausta alamkaust manuste hoiustamiseks. Kui jääb tühjaks, manused pannakse praegusesse kausta.</string>
 </resources>
