[ci skip] Update translations (Estonian)

--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -26,16 +26,16 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="enter_name_of_folder">Sisesta nimi uuele kaustale</string>
     <string name="create_folder">Loo kaust</string>
     <string name="create_new_document">Loo uus kirje</string>
-    <string name="move">Liiguta</string>
-    <string name="copy">Koopia</string>
+    <string name="move">Teisalda</string>
+    <string name="copy">Kopeeri</string>
     <string name="info">Teave</string>
     <string name="file_folder_already_exists_please_use_a_different_name">Kirje/kaust juba leidub! Palun pane erinev nimi</string>
     <string name="import_from_device">Impordi seadmest</string>
-    <string name="import_">Importimine</string>
+    <string name="import_">Sissetoomine</string>
     <string name="append_to_witharg">Lisa %s lõppu</string>
     <string name="select_folder">Vali kaust</string>
     <string name="edit">Toimeta</string>
-    <string name="search_documents">Otsi kirjetest</string>
+    <string name="search_documents">Otsi kirjutistest</string>
     <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Jaga&#8230;</string>
     <string name="share">Jaga</string>
     <string name="search">Otsi</string>
@@ -66,7 +66,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="items_selected_witharg" tools:ignore="PluralsCandidate">%d asja valitud</string>
     <string name="hide_statusbar_at_this_view">Peida oleku ala sellest vaatest</string>
     <string name="hide_statusbar">Peida olekuriba</string>
-    <string name="name">Pealkiri</string>
+    <string name="name">Nimetus</string>
     <string name="url_or_path">URL / failitee</string>
     <string name="insert_link">Sisesta link</string>
     <string name="insert_image">Sisesta pilt</string>
@@ -360,12 +360,56 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="strikeout">Läbijoonitud</string>
     <string name="inline_code">Kood tekstireal</string>
     <string name="horizontal_line">Horisontaaljoon</string>
+    <string name="toggle_done">Märgi lõpetatuks</string>
+    <string name="link_color">Lingi värv</string>
+    <string name="add_context">Lisa valdkond</string>
+    <string name="add_project">Lisa ettevõtmisi</string>
+    <string name="archive_completed_tasks">Hoiusta lõpetatud ülesanded</string>
+    <string name="create_new_file_or_folder">Loo uus kirjutis või kaust</string>
+    <string name="choose_format">Vali vorming</string>
+    <string name="selected">Valitud</string>
+    <string name="back">Tagasi</string>
+    <string name="expand_collapse">Laienda/ ahenda</string>
+    <string name="essential">Hädavajalik</string>
+    <string name="append_human_readable_uuid_to_new_tasks">Lisage uutele ülesannetele inimloetav UUID</string>
+    <string name="action_order">Toimingute järjekord</string>
+    <string name="toggle_action_visibility">Lülita toimingu näitamist</string>
+    <string name="load_default_settings">Laadi vaikimisi seaded</string>
+    <string name="drag">Lohista</string>
+    <string name="created">Loodud</string>
+    <string name="file_encryption_password">Faili krüpteeringu salasõna</string>
+    <string name="no_password_set_cannot_encrypt_decrypt">Parooli pole määratud, ei saa krüpteerida ega dekrüpteerida.\nAvage Seaded -&gt; Üldine -&gt; Salasõna salasõna määramiseks.</string>
+    <string name="encrypt_file_content">Krüpteeri faili sisu</string>
+    <string name="utf8_with_bom">UTF-8 alguses BOM</string>
+    <string name="could_not_encrypt_file_content_the_file_was_not_saved">Faili sisu ei saanud krüptida. Faili ei salvestatud.</string>
+    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">Faili sisu ei saanud dekrüpteerida. Kas kasutasite vale salasõna? Kas fail on tõesti Markori AES-krüptimisega krüptitud?</string>
+    <string name="password_already_set_setting_a_new_password_will_overwrite">Parool on juba määratud. Uue salasõna määramine kirjutab olemasoleva üle ja selle unustamise korral ei pruugi te enam failidele juurde pääseda.</string>
+    <string name="code_block">Koodiread</string>
+    <string name="add_completion_date">Lisa lõpetamise kuupäev</string>
+    <string name="add_completion_date_for_todos_when_marking_them_as_done">Lõprtatuks märkimisel lisage ülesannete täitmise kuupäev</string>
+    <string name="file_description_format">Faili kirjelduse vorming</string>
+    <string name="file_description_format_dialog">Iga faili all oleva kirjelduse vorming failihalduris. Järgib Androidi SimpleDateFormat reegleid, millele on lisatud faili suuruse kuvamiseks FS. Oma asukoha vaikevormingu kasutamiseks jätke väli tühjaks.\n\nNäidis sisend:\nFS yyyy MMM pp hh:mm:ss aa\nVäljundvorming:\n30KB 20. mär 2020 23:24:52</string>
+    <string name="loading_default_value">Laadi vaikimisi väärtus</string>
+    <string name="file_settings">Faili sesaded</string>
+    <string name="search_and_replace">Otsi / asenda</string>
+    <string name="search_for">Otsi</string>
+    <string name="replace_with">Asenda sellega</string>
+    <string name="replace_once">Asenda (1)</string>
+    <string name="replace_all">Asenda kõik</string>
     <string name="matches">Vastavused</string>
     <string name="search_replace_pattern_error_message">Viga otsi ja asenda mustris.</string>
     <string name="backup_settings">Varundamise seaded</string>
     <string name="restore_settings">Taasta seaded</string>
     <string name="failed_to_create_backup">Varunduse loomine ebaõnnestus</string>
     <string name="export_settings_to_json_file">Väljuta seaded json faili</string>
+    <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Importige seaded varukoopia Json-failist. Edu korral taaskäivitatakse rakendus.</string>
+    <string name="failed_to_restore_settings_from_backup">Seadete taastamine varukoopiast ebaõnnestus</string>
+    <string name="newline_is_new_paragraph">Reavahetus = uus lõik</string>
+    <string name="search_in_content">Otsi sisust</string>
+    <string name="max_search_depth">Otsimise sügavus</string>
+    <string name="ignore_list">Eiramiste loend</string>
+    <string name="do_not_search_specified_files_and_folders">Ärge otsige määratud failidest ja kaustadest.\nKasutage eraldajana uut rida.\nKasutage täpsete kaustanimede jaoks jutumärke: \"Test\".\nVõi kasutage Regexit \'^[.].*\'\nNäited: ^\\..*\n \"test\"\n\"Test\"\n.*salajane.*\n.*VARUKOOPIA.*\n.*.ini</string>
+    <string name="regex_search">Regex otsing</string>
     <string name="case_sensitive">Tõstutundlik</string>
     <string name="stop_search_after_first_match">Lõpeta otsing pärast esimest leidu</string>
     <string name="regex_can_not_be_compiled">Regex ei kõlba</string>
@@ -393,6 +437,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="advanced_filtering">Täpsem eraldamine</string>
     <string name="match_any">Leia mistahes</string>
     <string name="match_all">Leia kõik</string>
+    <string name="dynamic_notebook_root_links">Märkmiku juure otsing</string>
+    <string name="search_dynamically_for_notebook_root">Vikilinkide järgimiseks otsige dünaamiliselt faili notebook.zim, et tuvastada praeguse märkmiku juurkataloog. Märkige see, kui kasutate mitut zim-märkmikku või rakenduses määratud märkmikukataloog ei vasta teie zim-märkmikule.</string>
+    <string name="share_into_format_prefix_for_text_shared">Markoris jagatud teksti vorming/eesliide. Järgib Androidi SimpleDateFormat reegleid.\n\nKasutage jagatud teksti paigutamiseks kohahoidjat {{text}}. Kui pole määratud, lisatakse jagatud tekst ja vormingut kasutatakse prefiksina.</string>
+    <string name="share_into_format">Jaga valitud vormingus</string>
     <string name="attachment_folder_name">Manuste kausta nimi</string>
     <string name="attachment_folder_name_desc">Praeguse kausta alamkaust manuste hoiustamiseks. Kui jääb tühjaks, manused pannakse praegusesse kausta.</string>
+    <string name="auto_format">Vorminda sobivalt</string>
+    <string name="insert_snippet">Sisesta katkend</string>
+    <string name="error_could_not_open_file">Viga: ei saa faili avatud.</string>
+    <string name="document_error_clip">Ilmnes viga: tekst kopeeriti lõikelauale.</string>
+    <string name="wont_save_min_length">Alla %d tähemärgiga faile ei salvestata automaatselt vältimaks andmete kadumist.</string>
+    <string name="advanced_filtering_help"><![CDATA[<small><a href="https://www.github.com/gsantner/markor/discussions/1940">Täpsemalt tegevuste eraldamise päringukeelest</a></small>]]></string>
+    <string name="filter">Eralda</string>
 </resources>
